Added some tests and switched to Java 11